--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,16 @@ body {
 }
 
 #map {
-    position: inline-block;
+    position: relative;
     top: 0;
     bottom: 0;
     width: 100%;
     height: 600px;
+}
+
+.session {
+    display: inline-block;
+    width: calc(50% - 10px);
 }
 
 #adb {
@@ -25,7 +30,7 @@ body {
 }
 
 #console {
-    position: inline-block;
+    position: relative;
     width: 100%;
     height: auto;
     background-color: #333333;
@@ -41,5 +46,77 @@ body {
 
 .row {
     height: 12px;
-    width: calc(50% - 20px);
+    width: calc(100% - 20px);
+}
+
+h1 {
+    font-family: "PT Sans Narrow";
+    font-weight: normal;
+    margin-top: 0;
+    margin-bottom: 0;
+    color: #FFFFFF;
+}
+
+#title {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(51, 51, 51, 0.7);
+    padding: 10px;
+}
+
+h3 {
+    font-family: 'PT Sans Narrow', Helvetica, Arial, Sans-serif;
+    font-weight: bold;
+    font-size: 18px;
+    margin-top: 0px;
+    margin-bottom: 10px;
+}
+
+.label-title {
+    color: #bfc2bd;
+    font-weight: bold;
+}
+
+h2 {
+    color: #7fcdbb;
+    font-size: 16px;
+}
+
+.instructions {
+    font-family: "PT Serif", "Georgia", serif;
+}
+
+.mapboxgl-popup {
+    max-width: 400px;
+    font: 12px/20px 'PT Sans', Arial, Helvetica, sans-serif;
+}
+
+.mapboxgl-popup-content {
+  color: #F3F3DD;
+  background-color: #383838;
+  /* border-color: #91785D; */
+  max-width: 250px;
+  /* box-shadow: 3px 3px 2px #8B5D33; */
+}
+
+.mapboxgl-popup p {
+    margin: 0px;
+}
+
+.mapboxgl-popup-anchor-top .mapboxgl-popup-tip,
+.mapboxgl-popup-anchor-top-left .mapboxgl-popup-tip,
+.mapboxgl-popup-anchor-top-right .mapboxgl-popup-tip {
+  border-bottom-color: #383838;
+}
+.mapboxgl-popup-anchor-bottom .mapboxgl-popup-tip,
+.mapboxgl-popup-anchor-bottom-left .mapboxgl-popup-tip,
+.mapboxgl-popup-anchor-bottom-right .mapboxgl-popup-tip {
+  border-top-color: #383838;
+}
+.mapboxgl-popup-anchor-left .mapboxgl-popup-tip {
+  border-right-color: #383838;
+}
+.mapboxgl-popup-anchor-right .mapboxgl-popup-tip {
+  border-left-color: #383838;
 }
