--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,9 @@ body {
 
 .session {
     display: inline-block;
-    width: calc(50% - 10px);
+    width: calc(50% - 20px);
     vertical-align: top;
+    padding: 5px;
 }
 
 #adb {
@@ -71,6 +72,7 @@ h1 {
     margin-top: 0;
     margin-bottom: 0;
     color: #FFFFFF;
+    font-size: 27px;
 }
 
 #title {
@@ -193,4 +195,16 @@ input[type=radio] + label:before{
     .logo {
         left: 795px;
     }
+}
+
+@media screen and (max-width: 500px) {
+
+    h3 {
+        font-size: 15px;
+    }
+
+    h1 {
+        font-size: 22px;
+    }
+
 }
