experimentally change colour scale

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ body {
 }
 
 .colors {
-    background: linear-gradient(to right, #F6FBC5, #EDF8B1, #DAF0B2, #C7E9B4, #A3DBB7, #7FCDBB, #41B6C4, #1D91C0, #225EA8, #253494, #081D58 );
+    background: linear-gradient(to right, #FDE724, #B8DE28, #74D056, #3BBC75, #20A285, #218A8D, #2D708E, #3A558C, #453781, #481568, #450C53 );
     border: #999999 solid 0.8px;
 }
 
